--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.1.0
+  http: ^0.13.0
 
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
