--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   shared_preferences: ^2.1.0
   http: ^0.13.0
 
+  get_it: ^7.5.0
+
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
   provider: ^6.0.0
