--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_test_drive">
+    package="com.manzanit0.cookbook">
    <application
-        android:label="flutter_test_drive"
+        android:label="cookbook"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
