--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_test_drive
-description: A new Flutter project.
+name: cookbook
+description: Cookbook Mobile app.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
