--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "flutter_test_drive" "\0"
+            VALUE "CompanyName", "com.manzanit0" "\0"
+            VALUE "FileDescription", "cookbook" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "flutter_test_drive" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "flutter_test_drive.exe" "\0"
-            VALUE "ProductName", "flutter_test_drive" "\0"
+            VALUE "InternalName", "cookbook" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 com.manzanit0. All rights reserved." "\0"
+            VALUE "OriginalFilename", "cookbook.exe" "\0"
+            VALUE "ProductName", "cookbook" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
